Changed link urls

--- a/content/pages/example-actions.mdx
+++ b/content/pages/example-actions.mdx
@@ -7,20 +7,20 @@ blocks:
           Download the free InReach mobile app on both iOS and Android devices
           for easy access and future use. 
         body: |
-          <ActionButton actionText="Download" link="http://localhost:3000/" />
+          <ActionButton actionText="Download" link="/" />
       - title: Share
         text: >-
           Bookmark the free InReach App on your computer and/or phone browser
           for easy access and to share with LGBTQ+ people in need.
         body: |
-          <ActionButton actionText="Share Now" link="http://localhost:3000/" />
+          <ActionButton actionText="Share Now" link="/" />
       - title: Donate
         text: >-
           Donations keep the InReach App free for everyone and support its
           continued development. A $25 donation helps 21 more people find safe
           resources. 
         body: |
-          <ActionButton actionText="Donate" link="http://localhost:3000/" />
+          <ActionButton actionText="Donate" link="/" />
       - title: Raise Awareness
         text: >-
           Download our marketing materials to help share the InReach App with
@@ -28,7 +28,7 @@ blocks:
           every LGBTQ+ person has access to safe resources. 
         body: >
           <ActionButton actionText="Raise Awareness"
-          link="http://localhost:3000/" />
+          link="/" />
       - title: Suggest Resources
         text: >-
           Suggest new LGBTQ+ affirming resources in your local community to our
@@ -36,7 +36,7 @@ blocks:
           help build InReach and help grow access to safe verified resources! 
         body: >
           <ActionButton actionText="Suggest Resources"
-          link="http://localhost:3000/" />
+          link="/" />
       - title: Spread Trans Joy
         text: >-
           Share the #TransMascFutures Campaign organized by InReach x GLAAD to
@@ -44,7 +44,7 @@ blocks:
           and increase access to safe resources.
         body: >
           <ActionButton actionText="Campaign Website"
-          link="http://localhost:3000/" />
+          link="/" />
     _template: actions
 ---
 
