Added the different fits for actions blocks

--- a/content/pages/example-actions.mdx
+++ b/content/pages/example-actions.mdx
@@ -2,6 +2,7 @@
 title: Example Actions
 blocks:
   - display: flex
+    boxSizing: fillHeight
     items:
       - title: Download App
         text: >-
@@ -45,3 +46,4 @@ blocks:
           <ActionButton actionText="Campaign Website" link="/" />
     _template: actions
 ---
+
