Feature/flex actions (#43)
Added the flex style option for the take action block, allowing the last
row of actions to be centered if not full. Added the types for the take
action block and the team gallery block as well. Formatting changes came
from npm run format.

Grid layout example: 

![image](https://github.com/stevensblueprint/inreach-website/assets/119906373/90238850-7d64-41d6-9137-ed95dc39626f)

Flex layout example:

![image](https://github.com/stevensblueprint/inreach-website/assets/119906373/1f860e57-5428-4237-abf9-34105aab34aa)

Display selector:

![image](https://github.com/stevensblueprint/inreach-website/assets/119906373/3874b4a3-6828-47f4-b92f-f51770048d62)

You can view the changes at
http://localhost:3000/admin/index.html#/~/example-actions by adding
another take action display section.

--- a/content/pages/example-actions.mdx
+++ b/content/pages/example-actions.mdx
@@ -1,11 +1,13 @@
 ---
 title: Example Actions
 blocks:
-  - items:
+  - display: flex
+    boxSizing: fillHeight
+    items:
       - title: Download App
         text: >-
           Download the free InReach mobile app on both iOS and Android devices
-          for easy access and future use. 
+          for easy access and future use.
         body: |
           <ActionButton actionText="Download" link="/" />
       - title: Share
@@ -18,33 +20,30 @@ blocks:
         text: >-
           Donations keep the InReach App free for everyone and support its
           continued development. A $25 donation helps 21 more people find safe
-          resources. 
+          resources.
         body: |
           <ActionButton actionText="Donate" link="/" />
       - title: Raise Awareness
         text: >-
           Download our marketing materials to help share the InReach App with
           your networks and on social media to help spread awareness and ensure
-          every LGBTQ+ person has access to safe resources. 
-        body: >
-          <ActionButton actionText="Raise Awareness"
-          link="/" />
+          every LGBTQ+ person has access to safe resources.
+        body: |
+          <ActionButton actionText="Raise Awareness" link="/" />
       - title: Suggest Resources
         text: >-
           Suggest new LGBTQ+ affirming resources in your local community to our
           Resource Team or help update information on existing listings, and
-          help build InReach and help grow access to safe verified resources! 
-        body: >
-          <ActionButton actionText="Suggest Resources"
-          link="/" />
+          help build InReach and help grow access to safe verified resources!
+        body: |
+          <ActionButton actionText="Suggest Resources" link="/" />
       - title: Spread Trans Joy
         text: >-
           Share the #TransMascFutures Campaign organized by InReach x GLAAD to
           showcase positive stories from the diverse trans masculine community
           and increase access to safe resources.
-        body: >
-          <ActionButton actionText="Campaign Website"
-          link="/" />
+        body: |
+          <ActionButton actionText="Campaign Website" link="/" />
     _template: actions
 ---
 
