feat: Styling footer

--- a/content/pages/Example-Footer.mdx
+++ b/content/pages/Example-Footer.mdx
@@ -1,6 +1,15 @@
 ---
 title: Example Footer
 blocks:
+  - slides:
+      - backgroundImage: /home/Homepage.jpg
+        slideTitle: Slide Title
+        slideContent: Slide Content
+        darken: true
+        animate: true
+        actionButton: |
+          <ActionButton text="Button Text" link="/" />
+    _template: carousel
   - _template: footer
 ---
 
