feat: Added slogan and disclaimer

--- a/content/pages/Example-Footer.mdx
+++ b/content/pages/Example-Footer.mdx
@@ -10,5 +10,8 @@ blocks:
         actionButton: |
           <ActionButton text="Button Text" link="/" />
     _template: carousel
-  - _template: footer
+  - slogan: Seek LGTB+ resources. Reach Safety. Find belonging
+    disclaimer: 'InReach, Inc. 2023 • All rights reserved • InReach ❤️ Open Source'
+    _template: footer
 ---
+
