Finished for bigger screens, need to add hamburger menu

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,6 +1,46 @@
 ---
 title: Home
 blocks:
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach Logo
+    navBGColor: Green
+    navLinks:
+      - linkName: About
+        linkUrls:
+          - sectionUrl: Mission
+            pathURL: /
+          - sectionUrl: Our Team
+            pathURL: /example-gallery
+          - sectionUrl: Our Vetting Process
+            pathURL: /
+      - linkName: News
+        linkUrls:
+          - sectionUrl: In The News
+            pathURL: /
+          - sectionUrl: Awards
+            pathURL: /
+          - sectionUrl: Our Blog
+            pathURL: /
+      - linkName: Get Help
+        linkUrls:
+          - sectionUrl: Get Help For Myself
+            pathURL: /
+          - sectionUrl: Get Help For My Client
+            pathURL: /
+      - linkName: Take Action
+        linkUrls:
+          - sectionUrl: Donate
+            pathURL: /
+          - sectionUrl: Multiply Your Support
+            pathURL: /
+      - linkName: Contact
+        linkUrls:
+          - sectionUrl: Contact Us
+            pathURL: /
+          - sectionUrl: Donor Dashboard
+            pathURL: /
+    _template: header
   - slides:
       - backgroundImage: /home/Homepage.jpg
         slideTitle: InReach
@@ -134,3 +174,4 @@ blocks:
     disclaimer: 'InReach, Inc. 2023 • All rights reserved • InReach ❤️ Open Source'
     _template: footer
 ---
+
