--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -40,6 +40,11 @@ blocks:
             pathURL: /
           - sectionUrl: Donor Dashboard
             pathURL: /
+    languages:
+      - language: English
+        flag: US
+      - language: Spanish
+        flag: ES
     _template: header
   - slides:
       - backgroundImage: /home/Homepage.jpg
@@ -174,4 +179,3 @@ blocks:
     disclaimer: 'InReach, Inc. 2023 • All rights reserved • InReach ❤️ Open Source'
     _template: footer
 ---
-
