--- a/content/pages/our-impact.mdx
+++ b/content/pages/our-impact.mdx
@@ -46,13 +46,7 @@ blocks:
       single individual user or user account.
       ***
     _template: richText
-  - heading: ''
-    richTextLeft: "## DISCOVER VERIFIED LGBTQ+ SERVICES WITH INREACH\n\nAccess the [InReach App](https://app.inreach.org/) on web (desktop and mobile), as well as native iOS and Android platforms \U0001F4F1. Our confidential app features a comprehensive directory of affirming, verified services spanning all 50 U.S. states, D.C., U.S. territories, Canada, and Mexico \U0001F30E.\n\nDiscover over 9,000 verified services available on the free InReach App throughout North America \U0001F31F. Our dedicated team of trained volunteers continually verifies and adds new services to ensure up-to-date support for our community.\n"
-    richTextRight: |
-      ![](</images/Our Impact page 2.jpg>)
-    _template: twoColumn
-  - richTextContent: |
-      ***
+  - richTextContent: "## InReach App Features\U0001F4F1\n"
     _template: richText
   - heading: "InReach App Features\U0001F4F1"
     verticalAlignment: middle
