our impact done

--- a/content/pages/our-impact.mdx
+++ b/content/pages/our-impact.mdx
@@ -1,28 +1,73 @@
 ---
 title: Our Impact
 blocks:
-  - navLinks:
-      - {}
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach Logo
+    navBGColor: Green
+    navLinks:
+      - linkName: About
+        linkUrls:
+          - sectionUrl: Mission
+            pathURL: /
+          - sectionUrl: Our Team
+            pathURL: /example-gallery
+          - sectionUrl: Our Vetting Process
+            pathURL: /
+      - linkName: News
+        linkUrls:
+          - sectionUrl: In The News
+            pathURL: /
+          - sectionUrl: Awards
+            pathURL: /
+          - sectionUrl: Our Blog
+            pathURL: /
+      - linkName: Get Help
+        linkUrls:
+          - sectionUrl: Get Help For Myself
+            pathURL: /
+          - sectionUrl: Get Help For My Client
+            pathURL: /
+      - linkName: Take Action
+        linkUrls:
+          - sectionUrl: Donate
+            pathURL: /
+          - sectionUrl: Multiply Your Support
+            pathURL: /
+      - linkName: Contact
+        linkUrls:
+          - sectionUrl: Contact Us
+            pathURL: /
+          - sectionUrl: Donor Dashboard
+            pathURL: /
     _template: header
+  - richTextContent: |
+      ![](/images/Our_Impact_Cover.png)
+    _template: richText
   - richTextLeft: |
       <YoutubeEmbed url="https://youtu.be/l_sm8Q1r3d8?si=p9QbImexqrCRotv2" />
     richTextRight: "#### InReach is the world’s first open source platform matching LGBTQ+ people facing persecution or discrimination with safe, verified resources. \U0001F308\U0001F3F3️‍⚧️\n"
     _template: twoColumn
-  - richTextContent: |
-      ## <ColoredText text="Our Impact by the Numbers " color="Light Blue" /> ✨
-    _template: richText
-  - richTextContent: "\U0001F49A All 50 U.S. states and D.C. with verified services listed on InReach and people using the platform to access safe resources \U0001F49A\n"
+  - richTextContent: "## <ColoredText text=\"Our Impact by the Numbers \" color=\"Light Blue\" /> ✨\n\n\U0001F49A All 50 U.S. states and D.C. with verified services listed on InReach and people using the platform to access safe resources \U0001F49A\n"
     _template: richText
   - richTextLeft: ''
+    richTextRight: ''
     _template: twoColumn
-  - richTextContent: "## We proudly serve the diverse LGBTQ+ commmunity \U0001F49A\n"
+  - richTextContent: "## We proudly serve the diverse LGBTQ+ commmunity \U0001F49A\n\nThe free InReach App is designed for the diverse and intersectional LGBTQ+ community. We are proud to have users from a wide variety of sexual orientations, gender identities, races/ethnicities, immigration statuses, ages, and more.\n"
     _template: richText
   - richTextContent: >
       The free InReach App is designed for the diverse and intersectional LGBTQ+
       community. We are proud to have users from a wide variety of sexual
       orientations, gender identities, races/ethnicities, immigration statuses,
-      ages, and more. 
+      ages, and more.
     _template: richText
+  - richTextLeft: >
+      ![](/images/img8.webp) LGBTQ+ identities![](/images/img9.webp)Immigration
+      statuses
+    richTextRight: >
+      ![](/images/img10.webp)Races/ethnicities![](/images/img12.webp)Countries
+      of origin
+    _template: twoColumn
   - richTextContent: >
       \*Note: Following our safety-first approach, we do not require any
       personally identifiable information to use the InReach App. Users who
@@ -31,6 +76,11 @@ blocks:
       sensitive information is stored anonymously and not connected to any
       single individual user or user account.
     _template: richText
+  - heading: ''
+    richTextLeft: "\nDISCOVER VERIFIED LGBTQ+ SERVICES WITH INREACH \n-----------------------------------------------\n\nAccess the [InReach App](https://app.inreach.org/) on web (desktop and mobile), as well as native iOS and Android platforms \U0001F4F1. Our confidential app features a comprehensive directory of affirming, verified services spanning all 50 U.S. states, D.C., U.S. territories, Canada, and Mexico \U0001F30E.\n\nDiscover over 9,000 verified services available on the free InReach App throughout North America \U0001F31F. Our dedicated team of trained volunteers continually verifies and adds new services to ensure up-to-date support for our community.\n"
+    richTextRight: |
+      Random Dude
+    _template: twoColumn
   - heading: "InReach App Features\U0001F4F1"
     richTextLeft: "#### Our vision is to ensure every LGBTQ+ person has on-demand access to safe resources via building a dynamic tech platform that everyone can contribute their knowledge to for free. \U0001F49A\n"
     richTextRight: |
