our impact done

--- a/content/pages/our-impact.mdx
+++ b/content/pages/our-impact.mdx
@@ -48,6 +48,11 @@ blocks:
     _template: richText
   - richTextContent: "## InReach App Features\U0001F4F1\n"
     _template: richText
+  - heading: ''
+    richTextLeft: "\nDISCOVER VERIFIED LGBTQ+ SERVICES WITH INREACH \n-----------------------------------------------\n\nAccess the [InReach App](https://app.inreach.org/) on web (desktop and mobile), as well as native iOS and Android platforms \U0001F4F1. Our confidential app features a comprehensive directory of affirming, verified services spanning all 50 U.S. states, D.C., U.S. territories, Canada, and Mexico \U0001F30E.\n\nDiscover over 9,000 verified services available on the free InReach App throughout North America \U0001F31F. Our dedicated team of trained volunteers continually verifies and adds new services to ensure up-to-date support for our community.\n"
+    richTextRight: |
+      Random Dude
+    _template: twoColumn
   - heading: "InReach App Features\U0001F4F1"
     verticalAlignment: middle
     richTextLeft: "### Our vision is to ensure every LGBTQ+ person has on-demand access to safe resources via building a dynamic tech platform that everyone can contribute their knowledge to for free. \U0001F49A\n"
