feat: tina images in lightbox display

--- a/content/pages/example-photo-gallery.mdx
+++ b/content/pages/example-photo-gallery.mdx
@@ -1,5 +1,29 @@
 ---
 title: Example Photo Gallery
 blocks:
-  - _template: photoGallery
+  - galleryHeader: |
+      # English
+    lightBoxGalleryHeader: ''
+    photos:
+      - photoTitle: English 1
+        photo: /marketing-materials/english/english-2.png
+      - photoTitle: English 2
+        photo: /marketing-materials/english/english-1.png
+      - photoTitle: English 3
+        photo: /marketing-materials/english/english-3.png
+      - photoTitle: English 4
+        photo: /marketing-materials/english/english-4.png
+      - photoTitle: English 5
+        photo: /marketing-materials/english/english-8.png
+      - photoTitle: Photo Title
+        photo: /marketing-materials/english/english-1.png
+      - photoTitle: Photo Title
+        photo: /marketing-materials/english/english-1.png
+      - photoTitle: Photo Title
+        photo: /marketing-materials/english/english-1.png
+      - photoTitle: Photo Title
+        photo: /marketing-materials/english/english-1.png
+      - photoTitle: Photo Title
+        photo: /marketing-materials/english/english-1.png
+    _template: photoGallery
 ---
