Added photo gallery (#87)
Created Gallery component with lightbox view to look through all items
and download

I uploaded some marketing materials for this PR but uploading all of
them should be another task when the page is created

**Gallery**

![Screenshot 2024-12-04 at 12 59
52 PM](https://github.com/user-attachments/assets/189f6fa1-a423-4b3e-9b49-b8ce9ccf728b)

**Selected Lightbox View**

![Screenshot 2024-12-04 at 1 00
33 PM](https://github.com/user-attachments/assets/7d6a44da-8497-4d33-a685-cd509dd14cc2)

**Tina Inputs**

_I know there is a weird bug where the rows that aren't filled are kind
of offset. Will need to come back to fix_

Dependencies:
- [react-grid-gallery](https://benhowell.github.io/react-grid-gallery)
-
[react-spring-lightbox](https://github.com/tim-soft/react-spring-lightbox)

Related to #32

--- a/content/pages/our-supporters.mdx
+++ b/content/pages/our-supporters.mdx
@@ -1,17 +1,61 @@
 ---
 title: Example Our Supporters
 blocks:
-  - navLinks:
-      - {}
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach Logo
+    navBGColor: Green
+    navLinks:
+      - linkName: About
+        linkUrls:
+          - sectionUrl: Mission
+            pathURL: /
+          - sectionUrl: Our Team
+            pathURL: /example-gallery
+          - sectionUrl: Our Vetting Process
+            pathURL: /
+      - linkName: News
+        linkUrls:
+          - sectionUrl: In The News
+            pathURL: /
+          - sectionUrl: Awards
+            pathURL: /
+          - sectionUrl: Our Blog
+            pathURL: /
+      - linkName: Get Help
+        linkUrls:
+          - sectionUrl: Get Help For Myself
+            pathURL: /
+          - sectionUrl: Get Help For My Client
+            pathURL: /
+      - linkName: Take Action
+        linkUrls:
+          - sectionUrl: Donate
+            pathURL: /
+          - sectionUrl: Multiply Your Support
+            pathURL: /
+      - linkName: Contact
+        linkUrls:
+          - sectionUrl: Contact Us
+            pathURL: /
+          - sectionUrl: Donor Dashboard
+            pathURL: /
     _template: header
-  - slides:
-      - backgroundImage: /home/Homepage.jpg
-        slideTitle: 'Our Supporters '
-        slideContent: ''
-        darken: true
-        animate: false
-        actionButton: ''
-    _template: carousel
+  - heroBackgroundImage:
+      src: /home/OurSupportersCover.jpg
+      alt: banner
+    heroHeaderText:
+      text: |
+        # <ColoredText text="OUR SUPPORTERS" color="White" />
+    _template: hero
+  - richTextContent: >
+      # <ColoredText text="WE'D LIKE TO GIVE SPECIAL THANKS TO THE FOLLOWING
+      ORGANIZATIONS:" color="Ally Green" />
+
+
+      The organizations listed below have contributed to the growth and
+      sustainability of InReach by providing financial and/or in-kind support.
+    _template: richText
   - format: square
     title: |
       # Foundation Partners
@@ -229,5 +273,6 @@ blocks:
         body: |
           <ActionButton actionText="Join" link="/" />
     _template: actions
+  - _template: footer
 ---
 
