feat: two column layout vertical alignment

--- a/content/pages/Get-Help-For-My-Client.mdx
+++ b/content/pages/Get-Help-For-My-Client.mdx
@@ -31,6 +31,7 @@ blocks:
       LGBTQ+ PEOPLE" color="Ally Green" />
     _template: richText
   - heading: ''
+    verticalAlignment: top
     richTextLeft: "## ARE YOU A LAWYER, CASE MANAGER, THERAPIST, SOCIAL WORKER, TEACHER OR OTHER DIRECT SERVICE PROVIDER WORKING WITH THE LGBTQ+ COMMUNITY?\n\nInReach is a trans-led tech nonprofit\_increasing resource access\_for the diverse LGBTQ+ community. We provide\_the world’s first\_open source\_platform matching LGBTQ+ people facing persecution or discrimination with safe, independently verified resources.\n\nInReach aims to serve as a digital one-stop-shop for the diverse, intersectional LGBTQ+ community: the\_[free InReach App](https://app.inreach.org/)\_lists verified services for asylum seekers, refugees and other immigrants, Black, Indigenous and People of Color (BIPOC), transgender and gender non-conforming (TGNC) folks, youth and their caregivers, and more LGBTQ+ communities.\n\nUse our\_[free website](https://app.inreach.org/)\_and\_[mobile app](https://inreach.org/mobile-app/)\_to gather verified legal, medical, mental health and social service referrals for LGBTQ+ people in need.\n\n![](/home/Service-Provider-Page-1024x725.webp)\n"
     richTextRight: >
       ## Watch this quick prototype demo video of the free InReach App on
