feat: update hero banner with button and darken background

--- a/content/pages/example-hero.mdx
+++ b/content/pages/example-hero.mdx
@@ -5,9 +5,12 @@ blocks:
       src: /home/Junior_Board_Cover.jpg
       alt: Background Image
     heroHeaderText:
-      text: >
-        # <ColoredText text="This is a test for the hero banner" color="White"
-        />
-      position: Middle
+      text: |
+        # <ColoredText color="White" text="OUR IMPACT." />
+
+        <ActionButton text="Click Me" link="/" />
+      darkenBackground: true
+      position: Left
     _template: hero
 ---
+
